--- a/stray.css
+++ b/stray.css
@@ -18,3 +18,20 @@
             -webkit-animation-timing-function: linear;
           /* text animation attributes ending */
           }
+    /* pop text animation beginning */
+@keyframes pop {
+    from {transform:scale(0.95)rotate(5deg);}
+    50% {transform:scale(1.02)rotate(5deg);}
+    to {transform:scale(0.95)rotate(5deg);}
+    }
+    @-webkit-keyframes pop {
+    from {-webkit-transform:scale(0.95)rotate(5deg);}
+    50% {-webkit-transform:scale(1.02)rotate(5deg);}
+    to {-webkit-transform:scale(0.95)rotate(5deg);}
+    }    
+      @-moz-keyframes pop {
+    from {-moz-transform:scale(0.95)rotate(5deg);}
+    50% {-moz-transform:scale(1.02)rotate(5deg);}
+    to {-moz-transform:scale(0.95)rotate(5deg);}
+    } 
+    /* pop text animation ending */
