--- a/stray.css
+++ b/stray.css
@@ -45,11 +45,12 @@
         display: -ms-flexbox;
         display: -webkit-flex;
         display: flex;
-        width: 610px;
-        height: 420px;
+        width: 630px;
+        height: 400px;
 }
 .profile div {
         padding: 10px;
+        vertical-align: middle;
 }
 .profile-image {
         width: auto;
