--- a/stray.css
+++ b/stray.css
@@ -49,7 +49,7 @@
         height: 410px;
 }
 .profile div {
-        align-items: center;
+        align-content: center;
 }
 .profile-image {
         width: 400px;
