--- a/stray.css
+++ b/stray.css
@@ -47,6 +47,7 @@
         display: -webkit-flex;
         display: flex;
         justify-content: center;
+        align-items: center;
         width: 650px;
         height: 410px;
 }
