--- a/stray.css
+++ b/stray.css
@@ -46,10 +46,11 @@
         display: -ms-flexbox;
         display: -webkit-flex;
         display: flex;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
         width: 650px;
-        height: 410px;
+        height: 400px;
 }
 .profile div {
         padding: 10px;
