--- a/stray.css
+++ b/stray.css
@@ -4,7 +4,7 @@
             font-weight: 700;
             width: full;
             text-align: right;
-            position: absolute;
+            float: right;
           /* POP TEXT ANIMATION ATTRIBUTES START */
             animation: pop;
             animation-duration: 2s;
