--- a/stray.css
+++ b/stray.css
@@ -4,7 +4,8 @@
             font-weight: 700;
             width: full;
             text-align: right;
-           position: relative;
+            position: relative;
+            top: 50px;
           /* POP TEXT ANIMATION ATTRIBUTES START */
             animation: pop;
             animation-duration: 2s;
