--- a/stray.css
+++ b/stray.css
@@ -5,7 +5,7 @@
             width: full;
             text-align: right;
             position: relative;
-            top: 50px;
+            top: 25px;
           /* POP TEXT ANIMATION ATTRIBUTES START */
             animation: pop;
             animation-duration: 2s;
@@ -24,19 +24,19 @@
         
     /* POP TEXT ANIMATION START */
 @keyframes pop {
-    from {transform:translateY(100px)scale(0.95)rotate(5deg);}
-    50% {transform:translateY(100px)scale(1.02)rotate(5deg);}
-    to {transform:translateY(100px)scale(0.95)rotate(5deg);}
+    from {transform:scale(0.95)rotate(5deg);}
+    50% {transform:scale(1.02)rotate(5deg);}
+    to {transform:scale(0.95)rotate(5deg);}
     }
     @-webkit-keyframes pop {
-    from {-webkit-transform:translateY(100px)scale(0.95)rotate(5deg);}
-    50% {-webkit-transform:translateY(100px)scale(1.02)rotate(5deg);}
-    to {-webkit-transform:translateY(100px)scale(0.95)rotate(5deg);}
+    from {-webkit-transform:scale(0.95)rotate(5deg);}
+    50% {-webkit-transform:scale(1.02)rotate(5deg);}
+    to {-webkit-transform:scale(0.95)rotate(5deg);}
     }    
       @-moz-keyframes pop {
-    from {-moz-transform:translateY(100px)scale(0.95)rotate(5deg);}
-    50% {-moz-transform:translateY(100px)scale(1.02)rotate(5deg);}
-    to {-moz-transform:translateY(100px)scale(0.95)rotate(5deg);}
+    from {-moz-transform:scale(0.95)rotate(5deg);}
+    50% {-moz-transform:scale(1.02)rotate(5deg);}
+    to {-moz-transform:scale(0.95)rotate(5deg);}
     } 
     /* POP TEXT ANIMATION END */
 
