--- a/stray.css
+++ b/stray.css
@@ -2,6 +2,7 @@
 #profile-title {
             font-size: 26px;
             font-weight: 700;
+            letter-spacing: 0.5;
             width: full;
             text-align: right;
             position: relative;
