--- a/stray.css
+++ b/stray.css
@@ -50,8 +50,8 @@
         display: -webkit-flex;
         display: flex;
         flex-direction: row;
-        justify-content: center;
-        align-items: center;
+        justify-content: start;
+        align-items: start;
         width: 650px;
         height: 400px;
 }
