--- a/stray.css
+++ b/stray.css
@@ -2,7 +2,7 @@
 #profile-title {
             font-size: 26px;
             font-weight: 900;
-            letter-spacing: 0.5;
+            letter-spacing: 0.5px;
             width: full;
             text-align: right;
           /* POP TEXT ANIMATION ATTRIBUTES START */
