--- a/stray.css
+++ b/stray.css
@@ -5,17 +5,17 @@
             letter-spacing: 0.5px;
             width: full;
             text-align: right;
-            position: relative;
+            position: relative; 
           /* POP TEXT ANIMATION ATTRIBUTES START */
-            animation: pop;
+            animation: floats;
             animation-duration: 2s;
             animation-iteration-count: infinite;
             animation-timing-function: linear;
-            -moz-animation: pop;
+            -moz-animation: floats;
             -moz-animation-duration: 2s;
             -moz-animation-iteration-count: infinite;
             -moz-animation-timing-function: linear;
-            -webkit-animation: pop;
+            -webkit-animation: floats;
             -webkit-animation-duration: 2s;
             -webkit-animation-iteration-count: infinite;
             -webkit-animation-timing-function: linear;
@@ -23,20 +23,20 @@
           }
         
     /* POP TEXT ANIMATION START */
-@keyframes pop {
-    from {transform:scale(0.95)rotate(8deg);}
-    50% {transform:scale(1.02)rotate(8deg);}
-    to {transform:scale(0.95)rotate(8deg);}
+@keyframes floats {
+    from {transform:translate(0,-5)rotate(8deg);}
+    50% {transform:scale(0,5)rotate(8deg);}
+    to {transform:scale(0,-5)rotate(8deg);}
     }
     @-webkit-keyframes pop {
-    from {-webkit-transform:scale(0.95)rotate(8deg);}
-    50% {-webkit-transform:scale(1.02)rotate(8deg);}
-    to {-webkit-transform:scale(0.95)rotate(8deg);}
+    from {-webkit-transform:scale(0,-5)rotate(8deg);}
+    50% {-webkit-transform:scale(0,5)rotate(8deg);}
+    to {-webkit-transform:scale(0,-5)rotate(8deg);}
     }    
       @-moz-keyframes pop {
-    from {-moz-transform:scale(0.95)rotate(8deg);}
-    50% {-moz-transform:scale(1.02)rotate(8deg);}
-    to {-moz-transform:scale(0.95)rotate(8deg);}
+    from {-moz-transform:scale(0,-5)rotate(8deg);}
+    50% {-moz-transform:scale(0,5)rotate(8deg);}
+    to {-moz-transform:scale(0,-5)rotate(8deg);}
     } 
     /* POP TEXT ANIMATION END */
 
