--- a/stray.css
+++ b/stray.css
@@ -24,19 +24,19 @@
         
     /* POP TEXT ANIMATION START */
 @keyframes pop {
-    from {transform:translate(0,-5)rotate(8deg);}
-    50% {transform:translate(0,5)rotate(8deg);}
-    to {transform:translate(0,-5)rotate(8deg);}
+    from {transform:scale(1)rotate(8deg);}
+    50% {transform:scale(1.2)rotate(8deg);}
+    to {transform:scale(1)rotate(8deg);}
     }
     @-webkit-keyframes pop {
-    from {-webkit-transform:translate(0,-5)rotate(8deg);}
-    50% {-webkit-transform:translate(0,5)rotate(8deg);}
-    to {-webkit-transform:translate(0,-5)rotate(8deg);}
+    from {-webkit-transform:scale(1)rotate(8deg);}
+    50% {-webkit-transform:scale(1.2)rotate(8deg);}
+    to {-webkit-transform:scale(1)rotate(8deg);}
     }    
       @-moz-keyframes pop {
-    from {-moz-transform:translate(0,-5)rotate(8deg);}
-    50% {-moz-transform:translate(0,5)rotate(8deg);}
-    to {-moz-transform:translate(0,-5)rotate(8deg);}
+    from {-moz-transform:scale(1)rotate(8deg);}
+    50% {-moz-transform:scale(1.2)rotate(8deg);}
+    to {-moz-transform:scale(1)rotate(8deg);}
     } 
     /* POP TEXT ANIMATION END */
 
