--- a/stray.css
+++ b/stray.css
@@ -1,5 +1,5 @@
 /* SYSTEM PROFILE TITLE */
-.profile-title {
+#profile-title {
             font-size: 26px;
             font-weight: 900;
             letter-spacing: 0.5px;
