--- a/stray.css
+++ b/stray.css
@@ -66,7 +66,10 @@
         padding: inherit;
 }
 .profile-l {
-        line-height: 1.5;
+        font-size: 20px;
+}
+.profile-r {
+        text-align: right;
         font-size: 20px;
 }
 /* MAIN PAGE DIV CSS END */
