--- a/stray.css
+++ b/stray.css
@@ -66,10 +66,12 @@
         padding: inherit;
 }
 .profile-l {
-        font-size: 20px;
+        line-height: 0.5px;
+        font-size: 15px;
 }
 .profile-r {
+        line-height: 0.5px;
         text-align: right;
-        font-size: 20px;
+        font-size: 15px;
 }
 /* MAIN PAGE DIV CSS END */
