--- a/stray.css
+++ b/stray.css
@@ -68,10 +68,12 @@
 .profile-l {
         line-height: 20px;
         font-size: 18px;
+        position: absolute;
 }
 .profile-r {
         line-height: 20px;
         text-align: right;
         font-size: 18px;
+        position: absolute;
 }
 /* MAIN PAGE DIV CSS END */
