--- a/stray.css
+++ b/stray.css
@@ -65,12 +65,12 @@
         height: auto;
         padding: inherit;
 }
-.profile-l {
+#profile-l {
         line-height: 20px;
         font-size: 18px;
         position: absolute;
 }
-.profile-r {
+#profile-r {
         line-height: 20px;
         text-align: right;
         font-size: 18px;
