--- a/stray.css
+++ b/stray.css
@@ -69,11 +69,15 @@
         line-height: 20px;
         font-size: 18px;
         position: absolute;
+        width: full;
+        bottom: 20px;
 }
 #profile-r {
         line-height: 20px;
         text-align: right;
         font-size: 18px;
+        width: full;
         position: absolute;
+        top: 20px;
 }
 /* MAIN PAGE DIV CSS END */
