--- a/stray.css
+++ b/stray.css
@@ -65,11 +65,11 @@
         height: auto;
         padding: inherit;
 }
-#profile-l {
+.profile-l {
         line-height: 20px;
         font-size: 18px;
 }
-#profile-r {
+.profile-r {
         line-height: 20px;
         text-align: right;
         font-size: 18px;
