--- a/straycss.css
+++ b/straycss.css
@@ -2,7 +2,7 @@
 /* PROFILE CONTAINER CSS START */
     .about-body {
         max-width: 450px;
-        
+        width: 450px;
     }
 /* PROFILE CONTAINER CSS END */
 /* PRIMARY WOLF IMAGE CSS START */
