--- a/straycss.css
+++ b/straycss.css
@@ -7,7 +7,7 @@
 /* PROFILE CONTAINER CSS END */
 /* PRIMARY WOLF IMAGE CSS START */
     #about-art {
-        width:auto%;
+        width:auto;
         position: absolute;
     }
 /* PRIMARY WOLF IMAGE CSS END */
