--- a/straycss.css
+++ b/straycss.css
@@ -31,10 +31,12 @@
     #about-text-1 {
         line-height: 20px;
         font-size: 18px;
+        left: 100;
     }
     #about-text-2 {
         line-height: 20px;
         text-align: right;
         font-size: 18px;
+        top: 100;
     }
 /* PAGE INFO TEXT CSS END */
