--- a/straycss.css
+++ b/straycss.css
@@ -1,11 +1,15 @@
 /* BUNDLES.CC/@STRAY CSS */
 
 /* PROFILE CONTAINER CSS START */
+    body {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+    }
     .about-body {
         width: 450px;
         height: 450px;
-        width: 250px;
-        height: auto;
+        
         padding: 10px;
     }
 /* PROFILE CONTAINER CSS END */
