--- a/straycss.css
+++ b/straycss.css
@@ -4,17 +4,15 @@
     .about-body {
         width: 550px;
         height: 450px;
-        padding: 10px;
-        position: fixed;
-        top: 50%;
-        left: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 /* PROFILE CONTAINER CSS END */
 
 /* PRIMARY WOLF IMAGE CSS START */
     #about-art {
-        width:auto;
-        position: inherit;
+        height:auto;
     }
 /* PRIMARY WOLF IMAGE CSS END */
 
