--- a/straycss.css
+++ b/straycss.css
@@ -1,27 +1,30 @@
 /* BUNDLES.CC/@STRAY CSS */
 
     .about-center {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display:flex;
+        justify-content:center;
+        align-items:center;
     }
+
 /* PROFILE CONTAINER CSS START */
     .about-body {
-        width: 550px;
-        height: 450px;
+        width:550px;
+        height:450px;
+        justify-content:center;
     }
 /* PROFILE CONTAINER CSS END */
 
 /* PRIMARY WOLF IMAGE CSS START */
     #about-art {
         height:auto;
+        position:absolute;
     }
 /* PRIMARY WOLF IMAGE CSS END */
 
 /* PAGE TITLE CSS START */
     .about-title {
-        font-size: 28px;
-        font-weight: 800;
+        font-size:28px;
+        font-weight:800;
     }
 /* PAGE TITLE CSS END */
 
@@ -30,14 +33,14 @@
         position:relative;
     }
     #about-text-1 {
-        line-height: 20px;
-        font-size: 18px;
-        left: 100;
+        line-height:20px;
+        font-size:18px;
+        left:100;
     }
     #about-text-2 {
-        line-height: 20px;
-        text-align: right;
-        font-size: 18px;
-        top: 100;
+        line-height:20px;
+        text-align:right;
+        font-size:18px;
+        top:100;
     }
 /* PAGE INFO TEXT CSS END */
