--- a/straycss.css
+++ b/straycss.css
@@ -4,7 +4,7 @@
     .about-body {
         width:550px;
         height:450px;
-        justify-content:center;
+        align-content:center;
     }
 /* PROFILE CONTAINER CSS END */
 
