--- a/straycss.css
+++ b/straycss.css
@@ -28,18 +28,19 @@
 
     .about-text {
         position:relative;
+        width:fit-content;
     }
     #about-text-1 {
         line-height:20px;
         font-size:18px;
-        left:100;
-        width:fit-content
+        width:fit-content;
+        position:inherit;
     }
     #about-text-2 {
         line-height:20px;
         text-align:right;
         font-size:18px;
-        top:100;
+        position: inherit;
     }
 
 /* PAGE INFO TEXT CSS END */
