--- a/straycss.css
+++ b/straycss.css
@@ -34,12 +34,14 @@
         line-height:20px;
         font-size:18px;
         position:inherit;
+        width:fit-content;
     }
     #about-text-2 {
         line-height:20px;
         text-align:right;
         font-size:18px;
         position:inherit;
+        width:fit-content;
     }
 
 /* PAGE INFO TEXT CSS END */
