--- a/straycss.css
+++ b/straycss.css
@@ -35,7 +35,7 @@
         font-size:18px;
         position:inherit;
         width:fit-content;
-        margin-bottom: 5%;
+        margin-bottom: 10px;
     }
     #about-text-2 {
         line-height:20px;
