--- a/straycss.css
+++ b/straycss.css
@@ -28,6 +28,8 @@
 
     .about-text {
         position:relative;
+        right:275px;
+        top:75px;
         width:225px;
     }
     #about-text-1 {
