--- a/stray.css
+++ b/stray.css
@@ -1,7 +1,7 @@
 /* BUNDLES.CC/@STRAY CSS */
 /* PROFILE CONTAINER CSS START */
 
-    .body {
+    #home {
         background-color:#000000;
         color:#f4f1b8;
         margin:10px;
