--- a/stray.css
+++ b/stray.css
@@ -67,7 +67,7 @@
     #button-img {
         width: 50px;
         height:auto;
-        margin-right:20px;
+        margin:right 25px;
     }
 
 /* PAGE INFO BOTTOM-HALF CSS END */
